Edit block with contact info#23 (Add slider)

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 @import "contact.css";
+@import "icons.css";
+@import "slider.css";
 @import "intro.css";
 @import "tabs.css";
-@import "icons.css";
 
 * {
   margin: 0;
