--- a/css/intro.css
+++ b/css/intro.css
@@ -2,24 +2,13 @@
   display: flex;
   justify-content: start;
 }
+.intro__wrapper{
 
-.intro__icon-wrapper {
-  margin-right: 30px;
-  width: 30px;
-  display: flex;
-  justify-content: center;
 }
 
-.intro__icon {
-  height: 1.1428rem;
-  vertical-align: text-bottom;
-}
-
-.intro__icon path {
-  fill: var(--text-decoration-color);
-}
-
-.intro_text {
+.intro__text {
   color: var(--secondary-text-color);
   text-align: justify;
+  font-size: 1.2rem;
 }
+
