--- a/css/socials.css
+++ b/css/socials.css
@@ -1,6 +1,5 @@
 .social-icons {
   display: flex;
-  gap: 15px;
   margin-top: 20px;
 }
 
@@ -15,6 +14,7 @@
   transition: var(--transition);
   text-decoration: none;
   font-size: 1.8rem;
+  margin: 0.5rem;
 }
 
 .social-icons a:hover {
