--- a/css/skills.css
+++ b/css/skills.css
@@ -1,5 +1,6 @@
 .skills__panel-soft .panel__name {
   margin-top: 0;
+  flex: 0 0 10rem;
 }
 
 .skill__level {
@@ -37,10 +38,10 @@
 
 @keyframes fillBar {
   from {
-    width: 0%;
+    width: 0;
   }
   to {
-    width: 100%;
+    width: 100;
   }
 }
 
