--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 :root {
   --primary-color: #2c3e50;
   --secondary-color: #3498db;
-  --background-color: #f5f6fa;
+  --background-color: #555555;
   --text-color: #2c3e50;
   --light-text: #7f8c8d;
   --opacity-text: #7f8c8dbb;
